Proper sharing notification
1/ Send notifications
2/ Receive notifications
3/ Notification landing page and approval flow

--- a/android/res/layout/activity_new_todo.xml
+++ b/android/res/layout/activity_new_todo.xml
@@ -23,13 +23,15 @@
         android:id="@+id/saveButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save" />
+        android:text="@string/save"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/shareButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/share" />
+        android:text="@string/share"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/deleteButton"
