--- a/android/res/layout/activity_new_todo.xml
+++ b/android/res/layout/activity_new_todo.xml
@@ -1,43 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="18sp"
-        android:text="@string/todo_prompt" />
-
-    <EditText
-        android:id="@+id/todo_text"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingTop="30dp" >
-    </EditText>
-
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:visibility="invisible" />
-
-    <Button
-        android:id="@+id/shareButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/share"
-        android:visibility="invisible" />
-
-    <Button
-        android:id="@+id/deleteButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/delete"
-        android:visibility="invisible" />
-
-</LinearLayout>
+    android:layout_height="match_parent"
+     />
