--- a/android/res/values/colors.xml
+++ b/android/res/values/colors.xml
@@ -9,4 +9,10 @@
     <color name="com_parse_ui_parse_login_text_hint">#AAAAAA</color>
     <color name="com_parse_ui_parse_login_display_text">@android:color/black</color>
 
+    <color name="white">#ffffff</color>
+    <color name="note_bg">#d3d6db</color>
+    <color name="note_item_bg">#ffffff</color>
+    <color name="note_item_border">#c2c3c8</color>
+    <color name="link">#0a80d1</color>
+    <color name="timestamp">#a0a3a7</color>
 </resources>
