Added action bar for saving, sharing and camera.

--- a/homenote_app/res/layout/activity_note_list.xml
+++ b/homenote_app/res/layout/activity_note_list.xml
@@ -19,7 +19,7 @@
         android:textSize="18sp" />
 
     <ListView
-        android:id="@+id/todo_list_view"
+        android:id="@+id/note_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/loggedin_info" >
