--- a/homenote_app/res/layout/list_item_note.xml
+++ b/homenote_app/res/layout/list_item_note.xml
@@ -5,13 +5,12 @@
     android:gravity="center_vertical" >
     
     <TextView
-            android:id="@+id/todo_title"
+            android:id="@+id/note_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
             android:layout_margin="20dp"
             android:textSize="20sp"
             android:layout_alignParentLeft="true" />
-    
 
 </RelativeLayout>
