--- a/homenote_app/res/values/dimens.xml
+++ b/homenote_app/res/values/dimens.xml
@@ -7,7 +7,7 @@
     <dimen name="note_item_margin">10dp</dimen>
     <dimen name="note_item_padding_top_bottom">20dp</dimen>
     <dimen name="note_item_padding_left_right">15dp</dimen>
-    <dimen name="note_item_timestamp">13dp</dimen>
+    <dimen name="note_item_meta_data">13dp</dimen>
     <dimen name="note_item_status_pad_left_right">15dp</dimen>
     <dimen name="note_item_status_pad_top">13dp</dimen>
     <dimen name="note_item_corner_radius">3dp</dimen>
