--- a/homenote_app/res/layout/activity_note_list.xml
+++ b/homenote_app/res/layout/activity_note_list.xml
@@ -2,10 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_padding"
+    android:paddingLeft="@dimen/activity_horizontal_padding"
+    android:paddingRight="@dimen/activity_horizontal_padding"
+    android:paddingTop="@dimen/activity_vertical_padding"
+    android:background="@color/note_bg"
     tools:context=".TodoListActivity" >
 
     <TextView
@@ -17,13 +18,14 @@
         android:text="@string/not_logged_in"
         android:textAlignment="center"
         android:textSize="18sp"
-        android:paddingBottom="5dp" />
+        android:paddingBottom="@dimen/note_item_padding_top_bottom" />
 
     <ListView
         android:id="@+id/note_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/loggedin_info" >
+        android:layout_below="@id/loggedin_info"
+        android:divider="@null" >
     </ListView>
 
     <LinearLayout
