--- a/homenote_app/res/values/dimens.xml
+++ b/homenote_app/res/values/dimens.xml
@@ -1,15 +1,19 @@
 <resources>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_padding">13dp</dimen>
+    <dimen name="activity_vertical_padding">13dp</dimen>
 
     <dimen name="note_item_margin">10dp</dimen>
-    <dimen name="note_item_padding_top_bottom">20dp</dimen>
-    <dimen name="note_item_padding_left_right">15dp</dimen>
-    <dimen name="note_item_meta_data">13dp</dimen>
+    <dimen name="note_item_padding_top_bottom">10dp</dimen>
+    <dimen name="note_item_padding_left_right">10dp</dimen>
     <dimen name="note_item_status_pad_left_right">15dp</dimen>
     <dimen name="note_item_status_pad_top">13dp</dimen>
     <dimen name="note_item_corner_radius">3dp</dimen>
     <dimen name="note_item_border_width">1dp</dimen>
+
+    <dimen name="note_component_padding">5dp</dimen>
+
+    <dimen name="note_item_meta_data_font">13dp</dimen>
+
 </resources>
