--- a/homenote_app/res/layout/list_item_note.xml
+++ b/homenote_app/res/layout/list_item_note.xml
@@ -7,12 +7,11 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginTop="@dimen/note_item_margin"
         android:paddingTop="@dimen/note_item_padding_top_bottom"
         android:paddingBottom="@dimen/note_item_padding_top_bottom"
         android:paddingLeft="@dimen/note_item_padding_left_right"
         android:paddingRight="@dimen/note_item_padding_left_right"
-        android:background="@drawable/bg_parent_rounded_corner"
+        android:background="@color/color_note_item"
         android:orientation="vertical" >
 
         <com.parse.ParseImageView
