--- a/homenote_app/res/values/colors.xml
+++ b/homenote_app/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="note_item_border">#c2c3c8</color>
     <color name="link">#0a80d1</color>
     <color name="timestamp">#a0a3a7</color>
+    <color name="highlight">#77c5e1</color>
+
 </resources>
