--- a/homenote_app/res/layout/list_item_note.xml
+++ b/homenote_app/res/layout/list_item_note.xml
@@ -25,18 +25,15 @@
             android:cropToPadding="false"
             android:adjustViewBounds="true"
             android:scaleType="center"
-            android:visibility="invisible" />
+            android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/note_title"
+        <LinearLayout
+            android:id="@+id/note_preview_linear_layout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:textSize="20sp"
-            android:layout_alignParentLeft="true"
-            android:paddingBottom="@dimen/note_component_padding"
-            android:ellipsize="end"
-            android:maxLines="3" />
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/note_component_padding" >
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
