--- a/homenote_app/res/layout/note_preview_checkedtext.xml
+++ b/homenote_app/res/layout/note_preview_checkedtext.xml
@@ -6,13 +6,17 @@
     android:orientation="horizontal">
 
     <CheckBox
-        android:id="@+id/snippet_checkbox"
+        android:id="@+id/note_preview_checkbox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/snippet_checkbox_text"
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
+    <TextView
+        android:id="@+id/note_preview_checkbox_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#00000000" />
+        android:textSize="@dimen/note_item_text_font"
+        android:ellipsize="end"
+        android:maxLines="3" />
 
 </LinearLayout>
