--- a/homenote_app/res/layout/snippet_edittext.xml
+++ b/homenote_app/res/layout/snippet_edittext.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <EditText
-        android:id="@+id/snippet_text"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#00000000" />
-
-</LinearLayout>
+<EditText
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/snippet_text"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="#00000000" />
