--- a/homenote_app/res/values/dimens.xml
+++ b/homenote_app/res/values/dimens.xml
@@ -15,5 +15,6 @@
     <dimen name="note_component_padding">5dp</dimen>
 
     <dimen name="note_item_meta_data_font">13dp</dimen>
+    <dimen name="note_item_text_font">18dp</dimen>
 
 </resources>
