Updated timestamp display and ordering fixed delete issues added cloud code

--- a/homenote_app/res/layout/fragment_new_note.xml
+++ b/homenote_app/res/layout/fragment_new_note.xml
@@ -17,7 +17,8 @@
         android:textSize="18sp"
         android:text="@string/note_prompt"
         android:paddingTop="@dimen/note_item_padding_top_bottom"
-        android:paddingBottom="@dimen/note_item_padding_top_bottom" />
+        android:paddingBottom="@dimen/note_item_padding_top_bottom"
+        android:isScrollContainer="false" />
 
     <ListView
             android:id="@+id/snippetList"
