Be able to send out push and receive on the client of the reminders.

--- a/homenote_app/res/layout/note_item_snippet.xml
+++ b/homenote_app/res/layout/note_item_snippet.xml
@@ -16,6 +16,8 @@
         <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:divider="?android:dividerHorizontal"
+                android:showDividers="end"
                 android:orientation="vertical"
                 android:paddingBottom="@dimen/note_component_padding" >
 
