Use scrollview for note view instead of listview, because of the keyboard resizing/focus issues when having edittext inside listviews.

--- a/homenote_app/res/layout/fragment_new_note.xml
+++ b/homenote_app/res/layout/fragment_new_note.xml
@@ -20,13 +20,16 @@
         android:paddingBottom="@dimen/note_item_padding_top_bottom"
         android:isScrollContainer="false" />
 
-    <ListView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/notePrompt">
+        <LinearLayout
             android:id="@+id/snippetList"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/notePrompt"
-            android:divider="@null"
             android:background="@drawable/bg_parent"
-            android:descendantFocusability="beforeDescendants" />
+            android:orientation="vertical" />
+        </ScrollView>
 
 </RelativeLayout>
