--- a/homenote_app/res/layout/fragment_new_note.xml
+++ b/homenote_app/res/layout/fragment_new_note.xml
@@ -14,7 +14,7 @@
         android:layout_weight="1"
         android:gravity="center"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="@dimen/note_action_text_font_size"
         android:text="@string/note_prompt"
         android:paddingTop="@dimen/note_item_padding_top_bottom"
         android:paddingBottom="@dimen/note_item_padding_top_bottom"
@@ -23,6 +23,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         android:layout_below="@+id/notePrompt">
         <LinearLayout
             android:id="@+id/snippetList"
@@ -30,6 +31,6 @@
             android:layout_height="match_parent"
             android:background="@drawable/bg_parent"
             android:orientation="vertical" />
-        </ScrollView>
+    </ScrollView>
 
 </RelativeLayout>
