--- a/homenote_app/res/values/dimens.xml
+++ b/homenote_app/res/values/dimens.xml
@@ -14,7 +14,8 @@
 
     <dimen name="note_component_padding">5dp</dimen>
 
-    <dimen name="note_item_meta_data_font">13dp</dimen>
-    <dimen name="note_item_text_font">18dp</dimen>
+    <dimen name="note_item_meta_data_font_size">13sp</dimen>
+    <dimen name="note_item_text_font_size">18sp</dimen>
+    <dimen name="note_action_text_font_size">18sp</dimen>
 
 </resources>
