--- a/homenote_app/res/layout/fragment_image_picker.xml
+++ b/homenote_app/res/layout/fragment_image_picker.xml
@@ -13,12 +13,13 @@
         android:layout_marginLeft="@dimen/note_item_margin"
         android:layout_marginRight="@dimen/note_item_margin"
         android:gravity="center_horizontal|center_vertical"
+        android:background="@color/image_bg"
         android:orientation="vertical" >
 
         <LinearLayout
             android:id="@+id/imagepicker_camera_button"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:focusable="true"
             android:clickable="true"
             android:background="@drawable/bg_camera_button"
@@ -34,6 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:fontFamily="sans-serif"
+                android:textSize="@dimen/note_action_text_font_size"
                 android:text="@string/imagepicker_take_photo"/>
 
         </LinearLayout>
@@ -43,10 +46,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="0.5"
         android:layout_marginTop="@dimen/note_item_margin"
         android:layout_marginLeft="@dimen/note_item_margin"
         android:layout_marginRight="@dimen/note_item_margin"
-        android:layout_weight="0.5">
+        android:background="@color/image_bg">
 
         <ListView
             android:id="@+id/imagepicker_image_list"
@@ -63,11 +67,12 @@
             android:orientation="vertical" >
 
             <TextView
+                android:id="@+id/imagepicker_no_images_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:gravity="center"
-                android:text="@string/imagepicker_no_images"
+                android:text="@string/imagepicker_loading"
                 android:textAlignment="center"
                 android:textSize="@dimen/note_action_text_font_size"
                 android:textColor="@color/white"/>
