--- a/homenote_app/res/values/colors.xml
+++ b/homenote_app/res/values/colors.xml
@@ -12,9 +12,13 @@
     <color name="white">#ffffff</color>
     <color name="note_bg">#d3d6db</color>
     <color name="note_item_bg">#ffffff</color>
+    <color name="note_item_bg_transparent">#80ffffff</color>
     <color name="note_item_border">#c2c3c8</color>
+    <color name="note_item_border_transparent">#80c2c3c8</color>
     <color name="link">#0a80d1</color>
     <color name="timestamp">#a0a3a7</color>
     <color name="highlight">#77c5e1</color>
+    <color name="highlight_transparent">#8077c5e1</color>
+    <color name="image_bg">#353535</color>
 
 </resources>
