--- a/homenote_app/res/values/dimens.xml
+++ b/homenote_app/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="note_item_text_font_size">18sp</dimen>
     <dimen name="note_action_text_font_size">18sp</dimen>
 
+    <dimen name="button_border_width">3dp</dimen>
 </resources>
