Added new sharing flow, fixed issues with accept sharing. Also support removing sharings.

--- a/homenote_app/res/layout/list_item_note.xml
+++ b/homenote_app/res/layout/list_item_note.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/note_meta_data"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/timestamp"
+                android:textColor="@color/note_meta_data"
                 android:textSize="@dimen/note_item_meta_data_font_size" />
         </LinearLayout>
 
