--- a/homenote_app/res/layout/fragment_new_note.xml
+++ b/homenote_app/res/layout/fragment_new_note.xml
@@ -7,24 +7,37 @@
     android:background="@color/note_bg"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/notePrompt"
+    <RelativeLayout
+        android:id="@+id/noteViewBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textSize="@dimen/note_action_text_font_size"
-        android:text="@string/note_prompt"
-        android:paddingTop="@dimen/note_item_padding_top_bottom"
-        android:paddingBottom="@dimen/note_item_padding_top_bottom"
-        android:isScrollContainer="false" />
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/note_prompt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:paddingTop="@dimen/note_item_padding_top_bottom"
+            android:paddingBottom="@dimen/note_item_padding_top_bottom"
+            android:textSize="@dimen/note_action_text_font_size"
+            android:text="@string/note_prompt" />
+
+        <ProgressBar
+            android:id="@+id/noteProgressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/note_component_padding"
+            android:layout_toRightOf="@id/note_prompt"
+            android:visibility="invisible" />
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:layout_below="@+id/notePrompt">
+        android:layout_below="@+id/noteViewBar">
         <LinearLayout
             android:id="@+id/snippetList"
             android:layout_width="match_parent"
