--- a/homenote_app/res/layout/snippet_reminder.xml
+++ b/homenote_app/res/layout/snippet_reminder.xml
@@ -19,7 +19,7 @@
         android:id="@+id/snippet_reminder_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/timestamp"
+        android:textColor="@color/note_meta_data"
         android:textSize="@dimen/note_item_meta_data_font_size" />
 
 </LinearLayout>
