--- a/homenote_app/res/layout/fragment_new_note.xml
+++ b/homenote_app/res/layout/fragment_new_note.xml
@@ -43,6 +43,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/bg_parent"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:orientation="vertical" />
     </ScrollView>
 
