--- a/ParseLoginUI/res/layout/com_parse_ui_parse_login_form.xml
+++ b/ParseLoginUI/res/layout/com_parse_ui_parse_login_form.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/ParseLoginUI.EditText"
-        android:hint="@string/com_parse_ui_username_input_hint" />
+        android:hint="@string/com_parse_ui_username_input_hint"
+        android:inputType="textEmailAddress"/>
 
     <EditText
         android:id="@+id/login_password_input"
